Task #4885 - WP4 - Update DB schema according to the terminology - fixies to DB scripts, upload form, also backend rework for this new DB